@@ -22,6 +22,7 @@
     <File name="./DocumentBuffer.cs" subtype="Code" buildaction="Compile" />
     <File name="./DocumentTagTable.cs" subtype="Code" buildaction="Compile" />
     <File name="./DocumentBufferArchiver.cs" subtype="Code" buildaction="Compile" />
+    <File name="./DocumentTag.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
